Fixed error on IOS, where JS code would not be ran

--- a/Style/Main.css
+++ b/Style/Main.css
@@ -67,6 +67,7 @@ body {
 	position: absolute;
 	transition: 500ms;
 	opacity: 0.8;
+	display: none;
 }
 
 .project-col:hover > .project-overlay {
